standalone visibility fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1124,7 +1124,7 @@ padding-left: 2px ;
 .usermenu.guest .settings, .usermenu.guest .logout, .usermenu.guest .profile {
   display: none ;
 }
-.usermenu.standalone .profile,.usermenu.standalone .logout,.usermenu.standalone .create-account,.usermenu.standalone .discard-account {
+.usermenu.standalone .settings,.usermenu.standalone .profile,.usermenu.standalone .logout,.usermenu.standalone .create-account,.usermenu.standalone .discard-account {
   display: none ;
 }
 
