--- a/static/css/user.css
+++ b/static/css/user.css
@@ -45,6 +45,10 @@
   margin-left: 10px ;
 }
 
+body.standalone #usersettings-menu-settings, body.standalone #usersettings-menu-profile {
+  display: none ;
+}
+
 #usersetting-change-password-view {
   transition-property: height ;
   transition-duration: .5s ;
